Creado módulo foo de prueba

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,3 +1,3 @@
-<button class="btn btn-success" ngbTooltip="Thanks :)">
-  Pass me over!
+<button class="btn btn-success" (click)="openModal()">
+  Open Baz Modal
 </button>
